# pystitch

./: .gitignore  AGENTS.md  DEVELOPERS.md  README.md  noxfile.py  pyproject.toml
.ci/: audit_with_waivers.py
.githooks/: install.ps1  install.sh  pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: dependency-review.yml  test.yml
src/pystitch/: EmbPattern.py  EmbThread.py
test/: cleanup_case.py  pattern_for_tests.py  test_catalog.py  test_color_fileformats.py  test_convert_csv.py  test_convert_dst.py  test_convert_exp.py  test_convert_gcode.py  test_convert_jef.py  test_convert_pec.py  test_convert_pes.py  test_convert_tbf.py  test_convert_u01.py  test_convert_vp3.py  test_convert_xxx.py  test_datapreservation.py  test_embpattern.py  test_encoder.py  test_generic.py  test_interpolate.py  test_io.py  test_json.py  test_matrix.py  test_meta.py  test_overloads.py  test_palette.py  test_read_hus.py  test_trims_dst_jef.py  test_writes.py
